--- a/App.config
+++ b/App.config
@@ -23,7 +23,10 @@
                 <value>yes</value>
             </setting>
             <setting name="version" serializeAs="String">
-                <value>0.5.2</value>
+                <value>0.1.5</value>
+            </setting>
+            <setting name="lastUpdate" serializeAs="String">
+                <value>Never</value>
             </setting>
         </Bget.My.MySettings>
     </userSettings>
